objects/vlocity_ins__OrchestrationQueueAssignmentRule__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemCondition__c</fullName>
        <label>Orchestration Item Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Item Definition</label>
        <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Queue Assignment Rules</relationshipLabel>
        <relationshipName>OrchestrationQueueAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationPlanDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Plan Definition</label>
        <referenceTo>vlocity_ins__OrchestrationPlanDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Queue Assignment Rules</relationshipLabel>
        <relationshipName>OrchestrationQueueAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderItemCondition__c</fullName>
        <label>Order Item Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Orchestration Queue Assignment Rules</relationshipLabel>
        <relationshipName>OrchestrationQueueAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SystemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>vlocity_ins__System__c</referenceTo>
        <relationshipLabel>Orchestration Queue Assignment Rules</relationshipLabel>
        <relationshipName>OrchestrationQueueAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SystemInterfaceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Interface</label>
        <referenceTo>vlocity_ins__SystemInterface__c</referenceTo>
        <relationshipLabel>Orchestration Queue Assignment Rules</relationshipLabel>
        <relationshipName>OrchestrationQueueAssignmentRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ThorOrchestrationQueue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Thor Orchestration Queue</label>
        <referenceTo>vlocity_ins__ThorOrchestrationQueue__c</referenceTo>
        <relationshipLabel>Orchestration Queue Assignment Rules</relationshipLabel>
        <relationshipName>Orchestration_Queue_Assignment_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Orchestration Queue Assignment Rule</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrchestrationQueueAssignmentRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Queue Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>